<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="character"
            type="com.moises.characters.domain.model.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/cardview_default_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimens_10"
                android:layout_marginBottom="@dimen/dimens_5"
                android:text="@{character.name}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_character"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/character_image_description"
                    android:elevation="@dimen/cardview_default_elevation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImage="@{character.image}" />

                <TextView
                    android:id="@+id/tv_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_10"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@string/name_label"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_character" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_5"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@{character.name}"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

                <TextView
                    android:id="@+id/tv_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_10"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@string/gender_label"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_5"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@{character.gender}"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/tv_gender_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender_label" />

                <TextView
                    android:id="@+id/tv_species_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_10"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@string/species_label"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

                <TextView
                    android:id="@+id/tv_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_5"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@{character.species}"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/tv_species_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_species_label" />

                <TextView
                    android:id="@+id/tv_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_10"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@string/status_label"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_species" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimens_5"
                    android:layout_marginBottom="@dimen/dimens_5"
                    android:text="@{character.status}"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>